# deep-robotic-paper-folding

./: .gitignore  README.md  folding_planner.py  main.py  neural_force_manifold.py  revision_error_analysis.py
SOTABaseline/: bcfun1.m  bcfun2.m  bvpfun.m  guess.m  main.m  trySolution.m
misc_data/: workspace_outline.pkl
models/: model_weights.pth
nfm/: __init__.py  astar.py  folding_planner.py  neural_force_manifold.py  utils.py
simulation/: CMakeLists.txt  README.md  optionBC.txt  optionF.txt  samplingwithls.py
simulation/environment/: dampingForce.cpp  eigenIncludes.h  elasticBendingForce.cpp  elasticBendingForce.h  elasticRod.cpp  elasticRod.h  elasticStretchingForce.cpp  elasticTwistingForce.cpp  externalGravityForce.h  inertialForce.cpp  timeStepper.cpp  timeStepper.h
simulation/findBC/: Makefile  Option.h  main.cpp  setInput.cpp  setInput.h  simDER  world.cpp  world.h
simulation/measureF/: Makefile  main.cpp  option.txt  setInput.cpp  setInput.h  simDER  world.cpp  world.h
